--- a/src/FFXIVLazyStore/FFXIVLazyStore/appsettings.json
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168.1.195;Port=3306;Database=houseofsnow;Uid=root;Pwd=22662266;TreatTinyAsBoolean=true"
+  }
 }
