--- a/src/FFXIVLazyStore/FFXIVLazyStore/FFXIVLazyStore.csproj
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/FFXIVLazyStore.csproj
@@ -7,11 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Radzen.Blazor" Version="5.2.12" />
+    <PackageReference Include="Radzen.Blazor" Version="6.2.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Service\Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\hollows-solver\" />
   </ItemGroup>
 
 </Project>
