--- a/src/FFXIVLazyStore/FFXIVLazyStore/Properties/launchSettings.json
+++ b/src/FFXIVLazyStore/FFXIVLazyStore/Properties/launchSettings.json
@@ -13,7 +13,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "http://localhost:5253",
+        "applicationUrl": "http://localhost",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -22,7 +22,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
-        "applicationUrl": "https://localhost:7166;http://localhost:5253",
+        "applicationUrl": "https://localhost:7166;http://localhost",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
